k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notion-chart-generator-service
  labels:
    app: notion-chart-generator
  annotations:
    cloud.google.com/backend-config: '{"ports": {"3001":"notion-chart-generator-backendconfig"}}'
spec:
  type: ClusterIP
  selector:
    app: notion-chart-generator
  ports:
    - name: frontend
      port: 80
      targetPort: 3000
      protocol: TCP
    - name: backend
      port: 3001
      targetPort: 3001
      protocol: TCP
